<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Верхний заголовок -->
    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            app:tint="@color/black"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="18dp"
            android:id="@+id/back"
            android:src="@drawable/arrowback" />

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/settings"
            android:textSize="22sp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            />

    </FrameLayout>



    <!-- Кнопки и настройки (контейнер) -->

    <!-- Нижняя навигационная панель -->
    <LinearLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigation_panel"
        android:layout_below="@id/header"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-1dp"
        android:orientation="vertical">

        <!-- Тёмная тема -->
        <LinearLayout
            android:id="@+id/dark_mode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/screen_margin"
            android:paddingTop="23dp"
            android:paddingBottom="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dark_mode"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="18dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/dark_mode_description"
                android:src="@drawable/ic_dark_mode"
                app:tint="@color/black" />

            <Switch
                android:id="@+id/dark_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Поделиться приложением -->
        <LinearLayout
            android:id="@+id/share_app_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/screen_margin"
            android:paddingTop="14dp"
            android:paddingBottom="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share_app"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/share_app_description"
                android:src="@drawable/share"
                app:tint="@color/icon" />

        </LinearLayout>

        <!-- Написать в поддержку -->
        <LinearLayout
            android:id="@+id/support_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/screen_margin"
            android:paddingTop="14dp"
            android:paddingBottom="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/support_description"
                android:src="@drawable/support"
                app:tint="@color/icon" />
        </LinearLayout>

        <!-- Пользовательское соглашение -->
        <LinearLayout
            android:id="@+id/user_agreement_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/screen_margin"
            android:paddingTop="14dp"
            android:paddingBottom="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/user_agreement_description"
                android:src="@drawable/arrowforward"
                app:tint="@color/icon" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_panel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <!-- Кнопка "Поиск" -->
        <LinearLayout
            android:id="@+id/nav_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                app:tint="@color/black"
                android:contentDescription="@string/search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <!-- Кнопка "Медиатека" -->
        <LinearLayout
            android:id="@+id/nav_library"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/media"
                app:tint="@color/black"
                android:contentDescription="@string/media" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <!-- Кнопка "Настройки" -->
        <LinearLayout
            android:id="@+id/nav_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setings"
                app:tint="#3772E7"
                android:contentDescription="@string/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="#3772E7"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>